TEST_PROGRAMS/INVALID/serguei_nevarko/invalid5.min
#This program just prints the fraction 1/(2^n) in decimal form.

var message : string;
var message2 : string;
var counter : int;
var fraction : float;

message = "The fraction is ";
message2 = "The counter started at zero";

counter = 8;
fraction = 1.0;

if counter then
  while counter do
    counter = counter-1;
    fraction = fraction/2;
    print message+fraction;
  end #incorrect end statement
else
  print message2;
endif


